Now, the backup script is linked to udev so when the USB drive is hotplugged udev runs the backup script automatically and copies all the files across without needing human input. Plug the stick in, wait for the copy to complete, then unplug the stick.
Doesn't work yet though. 

11th July 2016:
Finished backup script! Now it works as described above, every time the drive is hotplugged, although:
One problem remains- the filenames are shortened to only 8 chars long, with a max of 3 chars for the extension excluding the full stop. All files and directories are copied in lowercase too for some reason. For example the file "REALLYlongName.html" becomes "reallylo.htm". Data in the files is not modified though.
Started looking into creating a fake screen for pygame to display (nothing) to. I use pygame to get key presses but the robot has no standard screen (only an OLED) so there's no point showing a pygame screen.
I copied some code off Average Man Vs Pi's pastebin page with the code for AverageBot with the correct command, but it's not working yet.
Removed backup option from menu.py - this is automatic now (see above).
Modified a few files - put a prompt in autorun.py for updating date and time manually (no accurate clock on Pi when powered off) and tidied up a bit.

12th July 2016:
Question I'd posted on StackExchange concerning the strange file renames (see above) had answers. They say I change how the drive is mounted because if mounted as msdos (as I had it) you get the file renames.
I changed the /etc/fstab file entry for my drive so it mounts it as vfat now.
Rename problem is now solved.
USB auto backup works completely and perfectly.
I'm considering adding a 'sync' function so I can add new code to a directory on the drive and when data is copied across, the backup script also checks for new code files in /mnt/Lobsang/new/ or similar.
Removed fstab entry for backup drive. It's not required. The mount command is now entirely within the backup script.